# android-xml-translater

./: .gitignore  LICENSE  README.md  pyproject.toml  strings.xml  translated_strings.xml
android_xml_translater/: __init__.py  __main__.py  __version__.py  arguments_helper.py  axt.py  translated_strings.xml
axt/: __main__.py  arguments_helper.py
es/: strings.xml
fr/: strings.xml
